--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+    <!-- Adding the Font Awesome CDN link for the icons --> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    
+    <!-- Navigation menu -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home" class="active"><i class="fas fa-home"></i>Home</a></li>
+                <li><a href="#about"><i class="fas fa-user"></i>About Me</a></li>
+                <li><a href="#contact"><i class="fas fa-phone"></i>Contact Me</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
