--- a/index.html
+++ b/index.html
@@ -20,5 +20,19 @@
             </ul>
         </nav>
     </header>
+    <section id="info">
+        <!-- Text content -->
+        <h2>Welcome to my site</h2>
+        <h1>Hi, I'm Tuqa, iOS/Full-stack <span class="highlight-dev">Developer.</span></h1>
+        <p>
+            I hold a bachelor's degree in English Literature and Language, with a minor in Translation. Post-graduation, my journey into programming began with courses that laid the foundation in the essentials of coding. My skillset now includes a thorough understanding of data structures, algorithms, object-oriented programming (OOP), and problem-solving. Fueled by a passion for Apple technologies, I secured an internship as an iOS developer at Asal company. My continuous quest for knowledge led me to learn full-stack development, evidenced by numerous projects utilizing the MERN stack. Currently, I am eager to pursue a career as a full-stack developer. I look forward to finding a role where I can further refine my skills and contribute to impactful projects.
+        
+            <a href="#more">See More...</a>
+        </p>
+        <div class="info-buttons">
+            <a href="#Hiring" class="button">Hire me !</a>
+            <a href="#projects" class="button">See My Project</a>
+        </div>
+    </section>    
 </body>
 </html>
