add profile pic

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </header>
     <section id="info">
         <!-- Text content -->
+        <div class="content">
         <h2>Welcome to my site</h2>
         <h1>Hi, I'm Tuqa, iOS/Full-stack <span class="highlight-dev">Developer.</span></h1>
         <p>
@@ -32,6 +33,11 @@
         <div class="info-buttons">
             <a href="#Hiring" class="button">Hire me !</a>
             <a href="#projects" class="button">See My Project</a>
+        </div>
+    </div>
+         <!--including image-->
+         <div class="profile-container">
+            <img src="images/Profile-image.png" alt="Profile pic" class="profile-pic">
         </div>
     </section>    
 </body>
