Enhanced website responsiveness

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
             <a href="#more">See More...</a>
         </p>
-        <div class="info-buttons">
+        <div class="button-container">
             <a href="#Hiring" class="button">Hire me !</a>
             <a href="#projects" class="button">See My Project</a>
         </div>
