apply semantic HTML

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
             </ul>
         </nav>
     </header>
+    <main>
     <section id="info">
+        <article>
         <!-- Text content -->
-        <div class="content">
         <h2>Welcome to my site</h2>
         <h1>Hi, I'm Tuqa, iOS/Full-stack <span class="highlight-dev">Developer.</span></h1>
         <p>
@@ -30,15 +31,16 @@
         
             <a href="#more">See More...</a>
         </p>
-        <div class="button-container">
+        <footer>
             <a href="#Hiring" class="button">Hire me !</a>
             <a href="#projects" class="button">See My Project</a>
-        </div>
-    </div>
+        </footer>
+        </article>
          <!--including image-->
-         <div class="profile-container">
+         <aside>
             <img src="images/Profile-image.png" alt="Profile pic" class="profile-pic">
-        </div>
-    </section>    
+        </aside>
+    </section>  
+    </main>  
 </body>
 </html>
